# server.js
@@ -1,5 +1,6 @@
 import swagger from 'swagger-ui-express';
-import apiDocs from './swagger.json' assert {type: 'json'};
+import fs from 'fs';
+const apiDocs = JSON.parse(fs.readFileSync(new URL('./swagger.json', import.meta.url), 'utf-8'));
 
 import express from 'express';
 import bodyParser from 'body-parser';
@@ -14,12 +15,6 @@ import { ApplicationError } from './src/error-handler/applicationError.js';
 
 const server = express();
 
-server.use((err, req, res, next) => {
-    console.error(err);
-    res.status(503).send("Something went wrong. Please try later.");
-    next(err); 
-});
-
 server.use("/api-docs", swagger.serve, swagger.setup(apiDocs));
 server.use(bodyParser.json());
 
@@ -27,22 +22,21 @@ server.use(loggerMiddleware);
 
 server.use("/api/posts", jwtAuth, PostRouter);
 server.use("/api/users", userRouter);
-server.use("/api/likes", jwtAuth, likeRouter);
-server.use("/api/comments", jwtAuth, commentrouter)
+server.use("/like", likeRouter);
+server.use("/comment", commentrouter);
 
+// Error handler middleware at the end of the stack
 server.use((err, req, res, next) => {
-
-   if(err instanceof ApplicationError){
-        res.status(err.code).send(err.message);
-   }
-   
-    res.status(504).send("Something went wrong. Please try later.");
-    next(err); 
+    console.error(err);
+    if (err instanceof ApplicationError) {
+        return res.status(err.code).send(err.message);
+    }
+    return res.status(500).send("Something went wrong. Please try later.");
 });
 
 server.use((req, res) => {
     res.status(404).send("API not found. Please check our Documentation for more inforamation at localhost:3000/api-docs");
-})
+});
 
 server.listen(3000, () => {
     console.log("Server is running at 3000");
