# swagger.json
@@ -150,9 +150,6 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "userId": {
-                      "type": "string"
-                    },
                     "caption": {
                       "type": "string"
                     },
@@ -161,7 +158,7 @@
                       "format": "binary"
                     }
                   },
-                  "required": ["userId", "caption", "image"]
+                  "required": ["caption", "image"]
                 }
               }
             }
@@ -208,9 +205,6 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "userId": {
-                      "type": "string"
-                    },
                     "caption": {
                       "type": "string"
                     },
@@ -348,6 +342,11 @@
           "tags": ["Likes"],
           "summary": "Toggle Like Status",
           "description": "Toggle like status for a specific post.",
+          "security": [
+            {
+              "JWT": []
+            }
+          ],
           "parameters": [
             {
               "name": "postId",
@@ -425,6 +424,11 @@
           "tags": ["Comments"],
           "summary": "Add Comment",
           "description": "Add a new comment to a post",
+          "security": [
+            {
+              "JWT": []
+            }
+          ],
           "parameters": [
             {
               "name": "postId",
